kubernetes/apps/storage/longhorn/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn
  namespace: storage
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-url: "http://longhorn-oauth2-proxy.storage.svc.cluster.local/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://auth.${SECRET_DOMAIN}/oauth2/start?rd=https%3A%2F%2F$host$request_uri"
    cert-manager.io/cluster-issuer: letsencrypt
    acme.cert-manager.io/http01-edit-in-place: "false"
    nignx.ingress.kubernetes.io/force-ssl-redirect: "true"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.alpha.kubernetes.io/target: ingress.${SECRET_DOMAIN}
spec:
  tls:
    - hosts:
        - &host "longhorn.${SECRET_DOMAIN}"
      secretName: *host
  rules:
    - host: *host
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-oauth2-proxy
  namespace: longhorn-system
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
    external-dns.alpha.kubernetes.io/exclude: "true"
spec:
  tls:
    - hosts:
        - &host "longhorn.${SECRET_DOMAIN}"
      secretName: *host
  rules:
    - host: *host
      http:
        paths:
          - path: /oauth2
            pathType: Prefix
            backend:
              service:
                name: longhorn-oauth2-proxy
                port:
                  number: 80
